--- a/config.toml
+++ b/config.toml
@@ -8,8 +8,8 @@ theme = "hook"
 
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = false
-title = "Jun Ouyang's Blog"
-description = "Jun Ouyang's Blog"
+title = "owl's Blog"
+description = "owl's Blog"
 generate_feed = true
 
 [markdown]
